[BlackBoard] Add Eraser, and save at local storage.

--- a/BlackBoard/index.html
+++ b/BlackBoard/index.html
@@ -3,15 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chalkboard Drawing</title>
+  <title>Interactive Chalkboard</title>
   <style>
     body {
       margin: 0;
       display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
+      justify-content: center;
       height: 100vh;
       background-color: #2e2e2e;
+      color: white;
+      font-family: Arial, sans-serif;
     }
     canvas {
       background-color: #333;
@@ -19,40 +22,85 @@
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
       cursor: crosshair;
     }
+    .controls {
+      margin: 10px;
+    }
+    .button {
+      padding: 10px 20px;
+      margin: 5px;
+      background-color: #555;
+      color: white;
+      border: none;
+      cursor: pointer;
+      border-radius: 4px;
+      transition: background-color 0.3s;
+    }
+    .button:hover {
+      background-color: #777;
+    }
   </style>
 </head>
 <body>
+  <div class="controls">
+    <button class="button" id="toggleButton">Switch to Eraser</button>
+  </div>
   <canvas id="chalkboard" width="800" height="600"></canvas>
 
   <script>
     const canvas = document.getElementById('chalkboard');
     const ctx = canvas.getContext('2d');
+    const toggleButton = document.getElementById('toggleButton');
     let drawing = false;
+    let isChalk = true;
 
-    // Setup chalk style
-    ctx.lineWidth = 5;
-    ctx.lineJoin = 'round';
-    ctx.lineCap = 'round';
-    ctx.strokeStyle = 'rgba(255, 255, 255, 0.8)'; // Chalk white with slight transparency
+    // Initialize chalk style
+    const setChalkStyle = () => {
+      ctx.lineWidth = 5;
+      ctx.lineJoin = 'round';
+      ctx.lineCap = 'round';
+      ctx.strokeStyle = 'rgba(255, 255, 255, 0.8)';
+      toggleButton.textContent = 'Switch to Eraser';
+    };
 
-    // Helper function to start drawing
+    // Initialize eraser style
+    const setEraserStyle = () => {
+      ctx.lineWidth = 20;
+      ctx.lineJoin = 'round';
+      ctx.lineCap = 'round';
+      ctx.strokeStyle = '#333';
+      toggleButton.textContent = 'Switch to Chalk';
+    };
+
+    // Start drawing
     const startDrawing = (e) => {
       drawing = true;
       draw(e);
     };
 
-    // Helper function to stop drawing
+    // Stop drawing
     const stopDrawing = () => {
       drawing = false;
-      ctx.beginPath(); // Reset path for smooth strokes
+      ctx.beginPath();
+      saveToLocalStorage();
     };
 
-    // Draw function
+    // Drawing logic
     const draw = (e) => {
       if (!drawing) return;
+
       const rect = canvas.getBoundingClientRect();
       const x = e.clientX - rect.left;
       const y = e.clientY - rect.top;
+
+      if (isChalk) {
+        // Add chalk effect
+        for (let i = 0; i < 5; i++) {
+          const offsetX = Math.random() * 4 - 2;
+          const offsetY = Math.random() * 4 - 2;
+          ctx.fillStyle = 'rgba(255, 255, 255, 0.3)';
+          ctx.fillRect(x + offsetX, y + offsetY, 1, 1);
+        }
+      }
 
       ctx.lineTo(x, y);
       ctx.stroke();
@@ -60,11 +108,41 @@
       ctx.moveTo(x, y);
     };
 
+    // Save canvas to Local Storage
+    const saveToLocalStorage = () => {
+      const dataURL = canvas.toDataURL();
+      localStorage.setItem('chalkboard', dataURL);
+    };
+
+    // Load canvas from Local Storage
+    const loadFromLocalStorage = () => {
+      const dataURL = localStorage.getItem('chalkboard');
+      if (dataURL) {
+        const img = new Image();
+        img.src = dataURL;
+        img.onload = () => ctx.drawImage(img, 0, 0);
+      }
+    };
+
+    // Toggle between chalk and eraser
+    toggleButton.addEventListener('click', () => {
+      isChalk = !isChalk;
+      if (isChalk) {
+        setChalkStyle();
+      } else {
+        setEraserStyle();
+      }
+    });
+
     // Event listeners
     canvas.addEventListener('mousedown', startDrawing);
     canvas.addEventListener('mouseup', stopDrawing);
     canvas.addEventListener('mousemove', draw);
     canvas.addEventListener('mouseleave', stopDrawing);
+
+    // Initial setup
+    setChalkStyle();
+    loadFromLocalStorage();
   </script>
 </body>
 </html>
