--- a/English2Chinese/index.html
+++ b/English2Chinese/index.html
@@ -214,7 +214,7 @@
                                 "content": "ok"
                             }
                         ],
-                        "model": "llama3-8b-8192",
+                        "model": "llama-3.3-70b-versatile",
                         "temperature": 0,
                         "max_tokens": 1,
                         "top_p": 1,
@@ -342,7 +342,7 @@
                                 "content": prompt
                             }
                         ],
-                        "model": "llama3-8b-8192",
+                        "model": "llama-3.3-70b-versatile",
                         "temperature": 0,
                         "max_tokens": 255,
                         "top_p": 1,
