--- a/English2Chinese/index.html
+++ b/English2Chinese/index.html
@@ -144,7 +144,7 @@
         }
 
         async function checkAndSetApiKey() {
-            const apiKey = localStorage.getItem('Groq_apiKey');
+            const apiKey = localStorage.getItem('Gemini_apiKey');
             if (!apiKey) {
                 showApiKeyForm();
             } else {
@@ -172,7 +172,7 @@
 
                 const isValid = await validateApiKey(apiKey);
                 if (isValid) {
-                    localStorage.setItem('Groq_apiKey', apiKey);
+                    localStorage.setItem('Gemini_apiKey', apiKey);
                     document.getElementById('english-word-input').disabled = false;
                     document.getElementById('api-key-form').style.display = 'none';
                     fetchAndUpdateVocabulary();
@@ -262,33 +262,37 @@
                     englishWordElement.value = word;
                 }
 
-                const chineseTranslation = await fetchTranslation(word);
-                chineseTranslationElement.textContent = `翻譯: ${chineseTranslation}`;
-
                 const details = await fetchWordDetails(word);
                 if (details) {
+                    englishWordElement.value = details.word;
+
+                    const translations = Object.entries(details.translation)
+                        .map(([pos, value]) => `${pos}: ${value}`)
+                        .join('\n');
+                    chineseTranslationElement.textContent = `翻譯:\n${translations}`;
+
+                    // 顯示詞性
                     partOfSpeechElement.textContent = `詞性: ${details.partOfSpeech}`;
-                    phoneticsElement.textContent = `音標: ${details.phonetics}`;
-                    //definitionElement.textContent = `定義: ${details.definition}`;
-                    exampleSentenceElement.textContent = `例句: ${details.exampleSentence}`;
+
+                    // 顯示每個詞性的詳細資訊
+                    const phonetics = Object.entries(details.phonetics)
+                        .map(([pos, value]) => `${pos}: ${value}`)
+                        .join('\n');
+                    phoneticsElement.textContent = `音標:\n${phonetics}`;
+
+                    const definitions = Object.entries(details.definition)
+                        .map(([pos, value]) => `${pos}: ${value}`)
+                        .join('\n');
+                    definitionElement.textContent = `定義:\n${definitions}`;
+
+                    const examples = Object.entries(details.exampleSentence)
+                        .map(([pos, value]) => `${pos}: ${value}`)
+                        .join('\n');
+                    exampleSentenceElement.textContent = `例句:\n${examples}`;
+                    
+                } else {
+                    throw new Error('Failed to fetch word details');
                 }
-                /* USE API END */
-
-                /* USE vocab.json BEGIN */
-                /* 如果 vocabList 已經被加載，從中選擇一個單詞顯示 */
-                // const response = await fetch('vocab.json');
-                // if (!response.ok) {
-                //     throw new Error('Network response was not ok');
-                // }
-                // const vocabList = await response.json();
-                // const randomVocab = vocabList[Math.floor(Math.random() * vocabList.length)];
-
-                // englishWordElement.value = randomVocab.english;
-                // chineseTranslationElement.textContent = `翻譯: ${randomVocab.chinese}`;
-                // partOfSpeechElement.textContent = `詞性: ${randomVocab.partOfSpeech}`;
-                // phoneticsElement.textContent = `音標: ${randomVocab.phonetics}`;
-                // exampleSentenceElement.textContent = `例句: ${randomVocab.example}`;
-                /* USE vocab.json END */
             } catch (error) {
                 console.error('Error loading vocabulary:', error);
                 document.getElementById('english-word-input').value = 'Error loading vocabulary';
@@ -300,83 +304,88 @@
         }
 
         async function fetchRandomWord() {
-            //const response = await fetch('https://random-word-api.herokuapp.com/word?number=1');
             const response = await fetch('words.json');
             const words = await response.json();
             const word = words[Math.floor(Math.random() * words.length)];
             return word;
         }
 
-        async function fetchTranslation(word) {
-            const response = await fetch(`https://translate.googleapis.com/translate_a/single?client=gtx&sl=en&tl=zh-TW&dt=t&q=${encodeURIComponent(word)}`);
-            const translation = await response.json();
-            return translation[0][0][0];
-        }
-
         async function fetchWordDetails(word) {
-            try {
-                const apiKey = localStorage.getItem('Groq_apiKey');
-                const prompt = `Please provide the following details for the English word "${word}": 
-                                1. Part of speech
-                                2. KK phonetics
-                                3. Definition
-                                4. An example sentence
-                                and return the details in the following JSON format:
-                                {
-                                    "part_of_speech": "<part_of_speech>",
-                                    "phonetics": "<phonetics>",
-                                    "definition": "<definition>",
-                                    "example_sentence": "<example_sentence>"
-                                }`;
+            const apiKey = localStorage.getItem('Gemini_apiKey'); // 從 localStorage 獲取 API Key
+            if (!apiKey) {
+                console.error('Gemini API Key is missing. Please set it in localStorage.');
+                return null;
+            }
 
-                const response = await fetch('https://api.groq.com/openai/v1/chat/completions', {
+            const prompt = `
+                Please provide the following details for the English word "${word}":
+                1. Traditional Chinese translation
+                2. Part of speech
+                3. KK phonetics
+                4. Definition
+                5. An example sentence
+                Return the details in the following JSON format:
+                {
+                    "word": "<word>",
+                    "translation": {
+                        "<part_of_speech>": "<translation>"
+                    },
+                    "part_of_speech": "<part_of_speech>",
+                    "phonetics": {
+                        "<part_of_speech>": "<phonetics>"
+                    },
+                    "definition": {
+                        "<part_of_speech>": "<definition>"
+                    },
+                    "example_sentence": {
+                        "<part_of_speech>": "<example_sentence>"
+                    }
+                }
+            `;
+
+            try {
+                const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${apiKey}`, {
                     method: 'POST',
                     headers: {
-                        'Content-Type': 'application/json',
-                        'Authorization': `Bearer ${apiKey}`
+                        'Content-Type': 'application/json'
                     },
                     body: JSON.stringify({
-                        "messages": [
+                        "contents": [
                             {
-                                "role": "user",
-                                "content": prompt
+                                "parts": [
+                                    {
+                                        "text": prompt
+                                    }
+                                ]
                             }
-                        ],
-                        "model": "llama-3.3-70b-versatile",
-                        "temperature": 0,
-                        "max_tokens": 255,
-                        "top_p": 1,
-                        "stream": false,
-                        "response_format": {
-                            "type": "json_object"
-                        },
-                        "stop": null
+                        ]
                     })
                 });
 
                 if (!response.ok) {
                     const errorData = await response.json();
-                    if (errorData.error && errorData.error.code === 'invalid_api_key') {
-                        localStorage.removeItem('Groq_apiKey');
-                        showApiKeyForm();
-                        return null;
-                    }
-                    throw new Error(errorData.error.message);
+                    throw new Error(errorData.error?.message || 'Failed to fetch word details');
                 }
 
                 const data = await response.json();
-                const content = data.choices[0].message.content;
+                const rawContent = data.candidates[0].content.parts[0].text.trim();
 
-                const details = JSON.parse(content);
+                // 解析 JSON 格式的內容
+                const content = JSON.parse(rawContent.replace(/```json|```/g, '').trim());
 
-                const partOfSpeech = details.part_of_speech || 'N/A';
-                const phonetics = details.phonetics || 'N/A';
-                const definition = details.definition || 'No definition available';
-                const exampleSentence = details.example_sentence || 'No example available';
+                // 處理多層次的結構
+                const result = {
+                    word: content.word || word,
+                    translation: content.translation || {},
+                    partOfSpeech: content.part_of_speech || 'N/A',
+                    phonetics: content.phonetics || {},
+                    definition: content.definition || {},
+                    exampleSentence: content.example_sentence || {}
+                };
 
-                return { partOfSpeech, phonetics, definition, exampleSentence };
+                return result;
             } catch (error) {
-                console.error('Error fetching word details:', error);
+                console.error('Error fetching word details with Gemini:', error);
                 return null;
             }
         }
