[Englich2Chinese] Add IPA pronunciation.

--- a/English2Chinese/index.html
+++ b/English2Chinese/index.html
@@ -72,6 +72,11 @@
             color: #777;
             font-size: 14px;
         }
+        .pronunciation {
+            color: #555; /* 淺色模式下的顏色 */
+            font-size: 14px;
+            margin-bottom: 8px;
+        }
         @media (prefers-color-scheme: dark) {
             body {
                 background-color: rgb(25, 25, 25);
@@ -99,6 +104,9 @@
                 background-color: #444;
                 border: 1px solid #555;
                 color: white;
+            }
+            .pronunciation {
+                color: #bbb; /* 深色模式下的顏色 */
             }
         }
     </style>
@@ -165,6 +173,12 @@
                 if (definition) definition.style.color = isDarkMode ? '#aaa' : '#666';
                 if (example) example.style.color = isDarkMode ? '#888' : '#777';
             });
+
+            // 更新 pronunciation 顏色
+            const pronunciationElement = document.querySelector('.pronunciation');
+            if (pronunciationElement) {
+                pronunciationElement.style.color = isDarkMode ? '#bbb' : '#555';
+            }
         }
 
         async function checkAndSetApiKey() {
@@ -254,21 +268,24 @@
 
         function updateTranslationUI(details) {
             const chineseTranslationElement = document.getElementById('chinese-translation');
-            const formattedOutput = Object.keys(details.translation)
-                .map(pos => {
-                    const translation = (details.translation[pos] || '').replace(/\s*\(.*?\)/g, '');
-                    const definition = details.definition[pos] || '';
-                    const example = details.exampleSentence[pos] || '';
-                    return `
-                        <div class="translation-block">
-                            <div class="pos">${pos.toUpperCase()}:</div>
-                            <div class="translation">${translation}</div>
-                            <div class="definition">${definition}</div>
-                            <div class="example">"${example}"</div>
-                        </div>
-                    `.trim();
-                })
-                .join('');
+            const formattedOutput = `
+                <div class="pronunciation">${details.pronunciation || ''}</div>
+                ${Object.keys(details.translation)
+                    .map(pos => {
+                        const translation = (details.translation[pos] || '').replace(/\s*\(.*?\)/g, ''); // 移除 (讀音)
+                        const definition = details.definition[pos] || '';
+                        const example = details.exampleSentence[pos] || '';
+                        return `
+                            <div class="translation-block">
+                                <div class="pos">${pos.toUpperCase()}:</div>
+                                <div class="translation">${translation}</div>
+                                <div class="definition">${definition}</div>
+                                <div class="example">"${example}"</div>
+                            </div>
+                        `.trim();
+                    })
+                    .join('')}
+            `.trim();
             chineseTranslationElement.innerHTML = formattedOutput;
         }
 
@@ -293,13 +310,14 @@
                 Please provide the following details for the English word "${word}":
                 1. Traditional Chinese translation (繁體中文)
                 2. Part of speech
-                3. KK phonetics
+                3. IPA pronunciation
                 4. English definition
                 5. An English example sentence
-                Ensure all translations is in Traditional Chinese (繁體中文).
+                Ensure all translations are in Traditional Chinese (繁體中文).
                 Return the details in the following JSON format:
                 {
                     "word": "<word>",
+                    "pronunciation": "<pronunciation>",
                     "translation": { "<part_of_speech>": "<translation>" },
                     "definition": { "<part_of_speech>": "<definition>" },
                     "example_sentence": { "<part_of_speech>": "<example_sentence>" }
@@ -326,6 +344,7 @@
 
                 return {
                     word: content.word || word,
+                    pronunciation: content.pronunciation || '',
                     translation: content.translation || {},
                     definition: content.definition || {},
                     exampleSentence: content.example_sentence || {}
